--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To-do List App</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="todo-app">
+            <h2 class="todo-apph3">To-Do List</h2>
+            <div class="searchbar">
+                <input type="text" id="inputbox" placeholder="ADD YOUR TODO" class="input">
+                <button class="button" onclick="addTask()">Add</button>
+            </div>
+            <ul id="ullist">
+             <!--    <li>Task 1</li></br>
+                <li>Task 2</li></br>
+                <li>Task 3</li></br>
+                <li>Task 4</li> -->
+            </ul>
+        </div>
+    </div>
+<script src="script.js"></script>    
 </body>
 </html>
