--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2 class="todo-apph3">To-Do List</h2>
+            <h1 class="todo-apph3">To-Do List</h1>
             <div class="searchbar">
-                <input type="text" id="inputbox" placeholder="ADD YOUR TODO" class="input">
+                <input type="text" id="inputbox" placeholder="ADD YOUR TODO" class="input" autofocus>
                 <button class="button" onclick="addTask()">Add</button>
             </div>
-            <ul id="ullist">
-             <!--    <li>Task 1</li></br>
-                <li>Task 2</li></br>
-                <li>Task 3</li></br>
-                <li>Task 4</li> -->
+            <div class="todos">
+                <ul id="ullist">
+                <li>Task 1</li>
+                <i class="fas fa-times"></i>
             </ul>
+            </div>
         </div>
     </div>
+<script src="https://kit.fontawesome.com/bf520e6492.js" crossorigin="anonymous"></script>    
 <script src="script.js"></script>    
 </body>
 </html>
